--- a/poda.cabal
+++ b/poda.cabal
@@ -31,8 +31,12 @@ library
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
+    , bytestring
+    , http-client
     , http-client-tls
+    , text
   default-language: Haskell2010
 
 executable poda-exe
