--- a/poda.cabal
+++ b/poda.cabal
@@ -36,7 +36,12 @@ library
     , bytestring
     , http-client
     , http-client-tls
+    , http-types
+    , mtl
+    , persistent
+    , persistent-sqlite
     , text
+    , time
   default-language: Haskell2010
 
 executable poda-exe
