--- a/poda.cabal
+++ b/poda.cabal
@@ -66,5 +66,6 @@ test-suite poda-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , hspec
     , poda
   default-language: Haskell2010
