--- a/poda.cabal
+++ b/poda.cabal
@@ -34,6 +34,7 @@ library
       aeson
     , base >=4.7 && <5
     , bytestring
+    , cassava
     , http-client
     , http-client-tls
     , http-types
