--- a/poda.cabal
+++ b/poda.cabal
@@ -45,7 +45,7 @@ library
     , time
   default-language: Haskell2010
 
-executable poda-exe
+executable poda
   main-is: Main.hs
   other-modules:
       Paths_poda
@@ -54,6 +54,8 @@ executable poda-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , cassava
     , poda
   default-language: Haskell2010
 
@@ -67,6 +69,8 @@ test-suite poda-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , cassava
     , hspec
     , poda
   default-language: Haskell2010
