--- a/package.yaml
+++ b/package.yaml
@@ -20,6 +20,7 @@ extra-source-files:
 description:         Please see the README on GitHub at <https://github.com/githubuser/poda#readme>
 
 dependencies:
+- aeson
 - base >= 4.7 && < 5
 - bytestring
 - cassava
@@ -27,7 +28,6 @@ dependencies:
 library:
   source-dirs: src
   dependencies:
-  - aeson
   - http-client
   - http-client-tls
   - http-types
@@ -47,6 +47,7 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - poda
+    - directory
 
 tests:
   poda-test:
