--- a/poda.cabal
+++ b/poda.cabal
@@ -53,9 +53,11 @@ executable poda
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
     , bytestring
     , cassava
+    , directory
     , poda
   default-language: Haskell2010
 
@@ -68,7 +70,8 @@ test-suite poda-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
     , bytestring
     , cassava
     , hspec
