--- a/poda.cabal
+++ b/poda.cabal
@@ -80,6 +80,7 @@ test-suite poda-test
     , bytestring
     , cassava
     , hspec
+    , persistent-sqlite
     , poda
     , time
   default-language: Haskell2010
