--- a/poda.cabal
+++ b/poda.cabal
@@ -76,6 +76,7 @@ test-suite poda-test
   other-modules:
       AnalyzeSpec
       SpecCommon
+      TestData
       WorkDiffTimeSpec
       Paths_poda
   hs-source-dirs:
@@ -89,6 +90,7 @@ test-suite poda-test
     , hspec
     , persistent-sqlite
     , poda
+    , raw-strings-qq
     , text
     , time
   default-language: Haskell2010
