Start with the `ourFirstReviewLatency` analyzer

--- a/poda.cabal
+++ b/poda.cabal
@@ -36,6 +36,8 @@ library
       Paths_poda
   hs-source-dirs:
       src
+  default-extensions:
+      OverloadedStrings
   ghc-options: -Wall
   build-depends:
       aeson
@@ -59,6 +61,8 @@ executable poda
       Paths_poda
   hs-source-dirs:
       app
+  default-extensions:
+      OverloadedStrings
   ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
@@ -81,6 +85,8 @@ test-suite poda-test
       Paths_poda
   hs-source-dirs:
       test
+  default-extensions:
+      OverloadedStrings
   ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
