Consider reviews only from the team

--- a/package.yaml
+++ b/package.yaml
@@ -35,6 +35,7 @@ library:
   source-dirs: src
   dependencies:
   - async
+  - containers
   - http-client
   - http-client-tls
   - http-types
@@ -67,6 +68,7 @@ tests:
     - -with-rtsopts=-N
     dependencies:
     - poda
+    - containers
     - hspec
     - persistent-sqlite
     - raw-strings-qq
