--- a/poda.cabal
+++ b/poda.cabal
@@ -54,6 +54,7 @@ library
     , persistent-sqlite
     , text
     , time
+    , unordered-containers
   default-language: Haskell2010
 
 executable poda
@@ -73,6 +74,7 @@ executable poda
     , directory
     , filepath
     , poda
+    , text
   default-language: Haskell2010
 
 test-suite poda-test
@@ -102,4 +104,5 @@ test-suite poda-test
     , raw-strings-qq
     , text
     , time
+    , unordered-containers
   default-language: Haskell2010
